Fixed the problem with background-image on iPhone

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -27,14 +27,13 @@ body, html
         padding: 20px
         border-radius: 20px
         box-sizing: content-box
-        // background-image: url(../assets/Ceu_Limpo.jpg)
         background-position: center center
-        background-size: cover
         background-repeat: no-repeat
-        // filter: blur(2px)
-        // filter: opacity(40%)
-        // filter: brightness(54%)
+        background-size: cover
+        -webkit-background-size: cover
+        -moz-background-size: cover
         
+        -o-background-size: cover
         .header
             height: 30%
             width: 90%
